# datacenter

./: .gitignore  README.md  setup.cfg  setup.py  whitelist.txt
datacenter/: __init__.py
datacenter/model/: UserRole.py  __init__.py  address.py  base.py  building.py  device_type.py  email.py  room.py  (+5 more)
tests/: test_00.py  test_01_UserRole.py  test_01_address.py  test_01_building.py  test_01_device_type.py  test_01_network_usage.py  test_01_room.py  test_01_user.py  utilities.py
userstories/: Ableytner_userstory_00.md  Building_02.md  DateTool_01.md  DavidTorbics20_userstory_00.md  DavidTorbics20_userstory_01.md  MH124578_userstory_00.md  MH124578_userstory_01.md  MH124578_userstory_02.md  MH124578_userstory_03.md  MH124578_userstory_04.md  MH124578_userstory_05.md  MH124578_userstory_06.md  MH124578_userstory_07.md  Pfeiffer_databasemodel_00.md  Pfeiffer_userstory_00.md  denisepostl_userstory_00.md  denisepostl_userstory_01.md  denisepostl_userstory_02.md  denisepostl_userstory_03.md  denisepostl_userstory_04.md  denisepostl_userstory_05.md  denisepostl_userstory_06.md  denisepostl_userstory_07.md  denisepostl_userstory_08.md  derler190063_userstory_00.md  fett190158_userstory_00.md  glieder_userstory_000.md  hifigraz_userstory_00.md  lackne190044_userstory_01.md  lackne190044_userstory_02.md  lackne190044_userstory_03.md  lackne190044_userstory_04.md  larissa_userstory_00.md  larissa_userstory_01.md  lorber190103_userstory_01.md  lorber190103_userstory_02.md  lukasheiling_userstory_00.md  ocPaul_userstory_01.md  posch190076_userstory_01.md  puntigam_userstory_00.md  (+15 more)
(+30 files in other folders)
